src/test/ui/type-check/missing_trait_impl.stderr
error[E0369]: binary operation `+` cannot be applied to type `T`
  --> $DIR/missing_trait_impl.rs:15:13
   |
15 |     let z = x + y; //~ ERROR binary operation `+` cannot be applied to type `T`
   |             ^^^^^
   |
   = note: `T` might need a bound for `std::ops::Add`

error: aborting due to previous error

